# toolbox

./: .gitignore  README.md
.github/: FUNDING.yml
charger-watts/: README.md  setup.sh
charger-watts/plasmoid/: metadata.json
charger-watts/plasmoid/contents/ui/: main.qml
clipflood/: README.md  gradle.properties  settings.gradle.kts
clipflood/app/: build.gradle.kts
clipflood/app/src/main/: AndroidManifest.xml
clipflood/app/src/main/res/drawable/: ic_launcher_foreground.xml
clipflood/app/src/main/res/layout/: activity_main.xml
clipflood/app/src/main/res/values/: strings.xml  themes.xml
pr-keepalive/: Cargo.toml  README.md  config.example.toml  setup.sh
pr-keepalive/cli/: Cargo.toml
pr-keepalive/cli/src/: main.rs
pr-keepalive/core/: Cargo.toml
pr-keepalive/core/src/: lib.rs
pr-keepalive/systemd/: pr-keepalive.service  pr-keepalive.timer
samsung-clipboard-cleaner/: .gitignore  README.md  settings.gradle.kts
samsung-clipboard-cleaner/app/: build.gradle.kts
samsung-clipboard-cleaner/app/src/main/: AndroidManifest.xml
samsung-clipboard-cleaner/app/src/main/res/layout/: activity_main.xml
samsung-clipboard-cleaner/app/src/main/res/values/: themes.xml
voice-memo/: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
voice-memo/app/: build.gradle.kts
voice-memo/app/src/main/: AndroidManifest.xml
voice-memo/common/car-app-service/: build.gradle.kts
voice-memo/common/car-app-service/src/main/: AndroidManifest.xml
voice-memo/common/data/: build.gradle.kts
voice-memo/gradle/: libs.versions.toml
(+34 files in other folders)
